modified the header and section by adding a breakpoint to stop the overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ nav {
 }
 
 #aboutusyoga{
+    display: flex;
     background-color: #FF7F11;
     padding: 5px 10px 5px 10px;
     width: 33%; 
@@ -182,7 +183,15 @@ nav {
     border-width: 5px
 }
 
+#yoga{
+    height: 300px;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 #about-us-legend{
+    display: flex;
     background-color: #FF7F11;
     padding: 5px 10px 5px 10px;
     width: 33%; 
@@ -193,6 +202,7 @@ nav {
 }
 
 #aboutustrx{
+    display: flex;
     background-color: #FF7F11;
     padding: 5px 10px 5px 10px;
     width: 33%; 
@@ -200,6 +210,12 @@ nav {
     vertical-align: center;
     border-style: solid;
     border-width: 5px
+}
+#trx{
+    height: 300px;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 
